# Workshop-Reporter

./: .gitignore  ANALYSIS.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONFIGURATION_SYSTEM.md  CONFIG_README.md  COORDINATION.md  MIGRATION_FROM_TPC_SESSION_REPORTER.md  PLAN.md  README-old.md  README.md  SIMPLIFICATION_SUMMARY.md  SPARK_NIM_SETUP.md  config_loader.py  configuration.yaml  create_track1_bundle.py  example_usage.py  llm_client.py  pre_hackathon_setup.md  pyproject.toml  ruff.toml  secrets.yaml.template  test_nim.py  test_nim_endpoint.py  test_nim_via_ssh.py  test_report_generation.py  tpc25_master_prompt.yaml  updated_plan.aligned.md  updated_readme.aligned.md
.github/workflows/: lint.yml  test.yml
Examples/: README.md  chat.py  config.py  prompt.yml  secrets_template.yml
archive/academy-exploration/: PLAN-academy.md  PLAN-workflow-original.md  RECONCILIATION_SUMMARY.md  academy_compatibility_evaluation.md  workshop-reporter-academy-strategy.md
config/prompts/: tpc25_config_reference.yml  tpc25_master_prompt.yaml
originals/: PLAN.md  README.md
prompts/: checker_prompt.yaml  tpc_master_prompt_v2.yaml
reference/tpc-session-reporter/: README.md  generate_report.py
tests/: __init__.py  conftest.py  test_assembler.py  test_checker.py  test_cli.py  test_gdrive.py  test_generator.py  test_llm_client.py  test_scraper.py
tests/fixtures/: sample_track_bundle.json
tpc_reporter/: __init__.py  assembler.py  checker.py  cli.py  config_loader.py  gdrive.py  generator.py  llm_client.py  scraper.py
